# acorn

./: .env  .gitignore  .npmrc  0.2ac99c02.iframe.bundle.js  0.2ac99c02.iframe.bundle.js.map  0.6d068b93892c427cfe59.manager.bundle.js  1.62f10f85.iframe.bundle.js  1.62f10f85.iframe.bundle.js.map  1.aebc70ceebf4f37120e2.manager.bundle.js  10.ea5e7ce0.iframe.bundle.js  10.ea5e7ce0.iframe.bundle.js.map  100.6b67bfe9.iframe.bundle.js  101.cc947a8c.iframe.bundle.js  102.33641ca9.iframe.bundle.js  103.8476e6e4.iframe.bundle.js  104.17c4c578.iframe.bundle.js  105.df882b2c.iframe.bundle.js  106.da1e3b29.iframe.bundle.js  107.b6c1548f.iframe.bundle.js  108.9d524958.iframe.bundle.js  109.4fbc403d.iframe.bundle.js  11.43dea938.iframe.bundle.js  1105.b8f1eee3.iframe.bundle.js  12.14b6ee9a.iframe.bundle.js  1249.875efb15.iframe.bundle.js  13.54f2fbe8.iframe.bundle.js  1341.5fc2bb50.iframe.bundle.js  1398.32da27fa.iframe.bundle.js  14.8dfdcae3.iframe.bundle.js  140.bca22b63.iframe.bundle.js  1466.2ec01709.iframe.bundle.js  1470.3b9b5196.iframe.bundle.js  15.d4bbc478.iframe.bundle.js  1590.7da63e2a.iframe.bundle.js  16.202bea13.iframe.bundle.js  16.c1854a7d.iframe.bundle.js  1675.36ff68c3.iframe.bundle.js  17.7724ba27.iframe.bundle.js  17.d7a957d9.iframe.bundle.js  1739.3e33be7c.iframe.bundle.js  (+613 more)
back/crates/dna_help/: Cargo.toml
back/crates/dna_help/src/: lib.rs
back/zomes/projects/: Cargo.toml  validation_rules.txt
back/zomes/projects/src/: lib.rs
back/zomes/projects/src/project/: edge.rs  entry_point.rs  error.rs  fixtures.rs  goal.rs  goal_comment.rs  goal_vote.rs  member.rs  mod.rs  project_meta.rs  validate.rs
back/zomes/projects/src/project/edge/: crud.rs  edge.rs  error.rs  validate.rs
back/zomes/projects/src/project/entry_point/: crud.rs  validate.rs
back/zomes/projects/src/project/goal/: crud.rs  validate.rs
back/zomes/projects/src/project/goal_comment/: crud.rs  validate.rs
back/zomes/projects/src/project/goal_member/: crud.rs  validate.rs
back/zomes/projects/src/project/goal_vote/: crud.rs  validate.rs
back/zomes/projects/src/project/member/: entry.rs  zome_fns.rs
back/zomes/projects/src/project/project_meta/: crud.rs  validate.rs
conductor/: Cargo.toml
conductor/src/: main.rs
dna/: Cargo.toml
dna/crates/dna_help/: Cargo.toml
dna/crates/dna_help/src/: lib.rs
dna/tests/: Cargo.toml
dna/tests/src/: fixtures.rs  lib.rs  test_lib.rs
dna/tests/src/profiles/: fixtures.rs  mod.rs  profile.rs
dna/tests/src/project/: connection.rs  edge.rs  entry_point.rs  error.rs  fixtures.rs  goal.rs  goal_comment.rs  goal_member.rs  goal_vote.rs  member.rs  mod.rs  outcome.rs  project_init.rs  project_meta.rs  validate.rs
dna/tests/src/project/goal_comment/: goal_comment.rs
dna/tests/src/project/goal_member/: validate.rs
dna/tests/src/project/goal_vote/: validate.rs
dna/tests/src/project/member/: validate.rs  zome_fns.rs
dna/tests/src/project/project_meta/: validate.rs
dna/zomes/profiles/: Cargo.toml
dna/zomes/profiles/src/: lib.rs  profile.rs
dna/zomes/profiles/src/profile/: mod.rs
dna/zomes/projects/: Cargo.toml  validation_rules.txt
dna/zomes/projects/src/: lib.rs
dna/zomes/projects/src/project/: error.rs  fixtures.rs  member.rs  mod.rs  validate.rs
dna/zomes/projects/src/project/connection/: crud.rs  validate.rs
dna/zomes/projects/src/project/edge/: crud.rs  validate.rs
dna/zomes/projects/src/project/entry_point/: crud.rs  validate.rs
dna/zomes/projects/src/project/goal/: crud.rs  validate.rs
dna/zomes/projects/src/project/goal_comment/: crud.rs  validate.rs
dna/zomes/projects/src/project/goal_member/: crud.rs  validate.rs
dna/zomes/projects/src/project/goal_vote/: crud.rs  validate.rs
dna/zomes/projects/src/project/member/: entry.rs  validate.rs  zome_fns.rs
dna/zomes/projects/src/project/outcome/: crud.rs
dna/zomes/projects/src/project/outcome_comment/: crud.rs  validate.rs
dna/zomes/projects/src/project/outcome_member/: crud.rs
dna/zomes/projects/src/project/outcome_vote/: crud.rs  validate.rs
dna/zomes/projects/src/project/project_meta/: crud.rs  validate.rs
happ/tests/profiles/: Cargo.toml
happ/tests/profiles/src/: fixtures.rs  lib.rs
happ/tests/profiles/src/profiles/: profile.rs
happ/zomes/profiles/: Cargo.toml
happ/zomes/profiles/src/: lib.rs  profile.rs
happ/zomes/profiles_integrity/: Cargo.toml
happ/zomes/profiles_integrity/src/: lib.rs
happ/zomes/projects/: Cargo.toml  validation_rules.txt
happ/zomes/projects/src/: lib.rs  ui_enum.rs
happ/zomes/projects/src/project/: error.rs  mod.rs  validate.rs
happs/: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPERS.md  README.md  flake.nix
happs/happ/tests/profiles/: Cargo.toml
happs/happ/tests/projects/: Cargo.toml
happs/happ/workdir/: happ.yaml  web-happ.yaml
happs/happ/workdir/dna/profiles/: dna.yaml
happs/happ/workdir/dna/projects/: dna.yaml
happs/happ/workdir/projects/: happ.yaml
happs/happ/zomes/profiles/: Cargo.toml
happs/happ/zomes/profiles/src/: lib.rs
happs/happ/zomes/profiles_integrity/: Cargo.toml
happs/happ/zomes/profiles_integrity/src/: lib.rs
happs/happ/zomes/projects/: Cargo.toml
happs/happ/zomes/projects/src/: lib.rs
happs/happ/zomes/projects_integrity/: Cargo.toml
happs/happ/zomes/projects_integrity/src/: lib.rs  ui_enum.rs
happs/lib/hdk_crud/: Cargo.toml  README.md  run-test.sh
happs/lib/hdk_crud/src/: crud.rs  lib.rs  signals.rs  wire_record.rs
happs/lib/hdk_crud/src/datetime_queries/: fetch_by_day.rs  fetch_by_hour.rs  fetch_by_time.rs  fetch_entries_from_day_to_day.rs  fetch_entries_from_day_to_hour.rs  fetch_entries_from_hour_to_day.rs  fetch_entries_from_hour_to_hour.rs  fetch_in_time_range.rs  fetchers.rs  inputs.rs  mod.rs  utils.rs
happs/lib/hdk_crud/src/modify_chain/: do_create.rs  do_delete.rs  do_fetch.rs  do_update.rs  mod.rs  utils.rs
happs/lib/hdk_crud/src/retrieval/: fetch_entries.rs  fetch_links.rs  get_latest_for_entry.rs  inputs.rs  mod.rs  utils.rs
happs/scripts/: happ-pack.sh  install-hc-tools.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+1393 files in other folders)
