[package]
name = "acorn"
version = "0.1.0"
description = "Organize your acorns"
authors = ["Connor Turland <connor@sprillow.com>"]
license = ""
repository = ""
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
tokio = { version = "1.3", features = [ "full" ]}
embedded_holochain_runner = { git = "https://github.com/Sprillow/embedded-holochain-runner.git", rev = "24084fb" }
