[workspace]
members = [
  "happ/zomes/profiles",
  "happ/zomes/profiles_integrity",
  "happ/zomes/projects",
  "happ/zomes/projects_integrity",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.dependencies]
hdi = "0.5.0"
hdk = "0.4.0"
holochain = { version = "0.4.0" }
holo_hash = {version = "0.4.0", features = ["encoding"]}
hdk_crud = { version = "0.15.0", features = ["no_example"] }