[workspace]
members = [
  "happ/zomes/profiles",
  "happ/zomes/profiles_integrity",
  "happ/zomes/projects",
  "happ/zomes/projects_integrity",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.dependencies]
hdi = "0.6.0"
hdk = "0.5.0"
holochain = { version = "0.5.0" }
holo_hash = {version = "0.5.0", features = ["encoding"]}
holochain_types = { version = "0.5.0" }