[package]
name = "app"
version = "0.1.0"
description = "Organize your acorns"
authors = ["Connor Turland <connor@sprillow.com>"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta-rc.1" }

[dependencies]

url = { version = "2.2", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features =["api-all"]}
embedded_holochain_runner = { git = "https://github.com/Sprillow/embedded-holochain-runner.git", branch = "main" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
