[package]
name = "tests"
version = "0.0.1"
edition = "2018"

[lib]

[dependencies]
hdk_crud = "0.0.103"
hdk = "0.0.103"
projects = { path = "../zomes/projects" }
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1"
mockall = "0.9"
assert_matches = "1.5.0"

[dev-dependencies]
fixt = "0.0.5"
holochain_types = "0.0.3"
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
default = ["mock"]
mock = ["hdk/mock", "hdk/test_utils"]
