[package]
name = "tests"
version = "0.0.1"
edition = "2018"

[lib]

[dependencies]
hdk_crud = { git = "https://github.com/lightningrodlabs/hdk_crud", branch = "relaxed-chain-ordering"}
hdk = "0.0.109"
holo_hash = { version = "0.0.8", features = ["encoding"] }
projects = { path = "../zomes/projects" }
profiles = { path = "../zomes/profiles" }
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1"
mockall = "0.9"
assert_matches = "1.5.0"

[dev-dependencies]
fixt = "0.0.6"
holochain_types = "0.0.9"
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
default = ["mock"]
mock = ["hdk/mock", "hdk/test_utils"]
