[package]
name = "dna_help"
version = "0.1.0"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

[dependencies]
#hdk = "0.0.100"
hdk = { git = "https://github.com/holochain/holochain", rev = "3a47f9798c6175997d27d450a7c4a0b92d17d4da" }
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1"
mockall = "0.9"

[dev-dependencies]
fixt = { git = "https://github.com/holochain/holochain", rev = "3a47f9798c6175997d27d450a7c4a0b92d17d4da" }
holochain_types = { git = "https://github.com/holochain/holochain", rev = "3a47f9798c6175997d27d450a7c4a0b92d17d4da" }
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
mock = ["hdk/mock", "hdk/test_utils"]

