[package]
name = "profiles"
version = "0.0.1"
edition = "2018"

[lib]
name = "profiles"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk_crud = "0.4.0"
holo_hash = { version = "0.0.7", features = ["encoding"] }
hdk = "0.0.108"
paste = "*"
serde = "*"
thiserror = "1"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"