[package]
name = "projects"
version = "0.0.1"
edition = "2018"

[lib]
name = "projects"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk_crud = { git = "https://github.com/lightningrodlabs/hdk_crud", branch = "relaxed-chain-ordering"}
holo_hash = { version = "0.0.8", features = ["encoding"] }
hdk = "0.0.109"
paste = "*"
# use whatever serde hdk uses
serde = "*"
thiserror = "1"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
