[package]
edition = "2021"
name = "profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
# hdk_crud = { version = "0.5.6", features = ["no_example"] }
hdk_crud = { git = "https://github.com/lightningrodlabs/hdk_crud", branch = "holochain-0.0.162-bump", features = ["no_example"]  }
chrono = "0.4.19"
hdk = "0.0.152"
holo_hash = {version = "=0.0.32", features = ["encoding", "fixturators"]}
profiles_integrity = { path = "../profiles_integrity" }
paste = "*"
serde = "*"
thiserror = "1"
