[package]
edition = "2021"
name = "profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hdk_crud = { version = "0.7.1", features = ["no_example"] }
hdk = "0.0.154"
holo_hash = {version = "=0.0.33", features = ["encoding", "fixturators"]}
profiles_integrity = { path = "../profiles_integrity" }
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
paste = "*"
serde = "*"
thiserror = "1"
