[package]
edition = "2021"
name = "projects"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects"

[dependencies]
# hdk_crud = { version = "0.5.6", features = ["no_example"] }
hdk_crud = { git = "https://github.com/lightningrodlabs/hdk_crud", branch = "holochain-0.0.162-bump" }
projects_integrity = { path = "../projects_integrity" }
hdk = "0.0.152"
holo_hash = {version = "=0.0.32", features = ["encoding"]}
paste = "*"
# use whatever serde hdk uses
chrono = "0.4.19"
serde = "*"
thiserror = "1"

