[package]
edition = "2021"
name = "projects"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects"

[dependencies]
hdk_crud = { version = "0.7.1", features = ["no_example"] }
hdk = "0.0.154"
holo_hash = {version = "=0.0.33", features = ["encoding"]}
projects_integrity = { path = "../projects_integrity" }
paste = "*"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
# use whatever serde hdk uses
serde = "*"
thiserror = "1"

