[package]
edition = "2021"
name = "projects"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "projects"

[dependencies]
hdk_crud = { version = "0.11.0", features = ["no_example"] }
hdk = "0.1.0"
holo_hash = {version = "0.1.0", features = ["encoding"]}
projects_integrity = { path = "../projects_integrity" }
paste = "*"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
# use whatever serde hdk uses
serde = "*"
thiserror = "1"

